fixed spacing around classes and in navbar

--- a/main.css
+++ b/main.css
@@ -14,29 +14,21 @@ nav {
   justify-content: space-between;
   align-items: center;
   background-color: var(--usf-green);
-  color: white;
-  padding: 20px;
+  padding: 15px;
 }
 
 nav a {
   color: white;
   text-decoration: none;
-  margin-right: 20px;
+  font-weight: bold;
 }
 
 nav a:hover {
   text-decoration: underline;
 }
 
-.nav_pages {
-  display: flex;
-  justify-content: flex-start;
-}
-
-.dropdown {
-  display: inline-block;
-  position: relative;
-  margin-left: 10px;
+.logo {
+  width: 150px;
 }
 
 .btn {
@@ -46,6 +38,7 @@ nav a:hover {
   color: white;
   padding: 7px;
   cursor: pointer;
+  margin-left: 10px;
 }
 
 .btn:hover {
@@ -53,56 +46,51 @@ nav a:hover {
   color: var(--usf-green);
 }
 
+.nav-buttons {
+  display: flex;
+}
+
 .dropdown-menu {
   display: none;
   position: absolute;
-  z-index: 1;
-  border-radius: 10px;
   background-color: var(--usf-green);
+  border-radius: 5px;
+  text-align: center;
 }
 
 .dropdown-menu a {
   color: #fff;
   display: block;
-  padding: 5px 10px;
   text-decoration: none;
-  border-radius: 10px;
+  border-radius: 5px;
+  padding: 5px;
 }
 
 .dropdown-menu a:hover {
   background-color: #f9f9f9;
   color: var(--usf-green);
-  width: 100%;
   text-decoration: none;
-  border-radius: 10px;
 }
 
 .dropdown:hover .dropdown-menu {
   display: block;
 }
 
-#usf-logo {
-  width: 150px;
-}
-
-.list-and-table {
-  display: flex;
-}
-
 .welcome-message {
   text-align: center;
-  margin: 5px;
 }
 
 .welcome-message p {
-  padding: 5px;
   margin: 0px;
-  border-radius: 10px;
   text-align: center;
   font-weight: bold;
   background-color: var(--usf-gold);
+  border-radius: 10px;
+  margin: 5px;
+  padding: 5px;
   animation: fade 5s;
   animation-fill-mode: forwards;
+  user-select: none;
 }
 
 @keyframes fade {
@@ -112,15 +100,20 @@ nav a:hover {
   }
 }
 
+.list-and-table {
+  display: flex;
+}
+
 .class-list {
-  position: relative;
   width: 200px;
+  margin: 0px 20px;
 }
 
 .class-list h1 {
-  font-size: 20px;
+  font-size: 30px;
   margin: 0px;
   text-align: center;
+  color: var(--usf-green);
 }
 
 .class-list ul {
@@ -135,10 +128,26 @@ nav a:hover {
 }
 
 .schedule-table {
-  margin: 20px auto;
   max-width: 800px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  margin: 0px;
+}
+
+.schedule-table h1 {
+  font-size: 30px;
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+  color: var(--usf-green);
+  text-align: center;
+}
+
+.schedule-table h2 {
+  font-size: grey;
+  font-size: 20px;
+  margin: 0px;
+  padding: 5px;
+  text-align: center;
+  font-style: italic;
 }
 
 table {
@@ -154,9 +163,10 @@ td {
   width: 20%;
 }
 
-th {
+.day-header {
   background-color: var(--usf-green);
   color: #fff;
+  margin: 0px;
 }
 
 tr:nth-child(even) {
@@ -192,11 +202,11 @@ tr:nth-child(even) {
     align-items: flex-start;
   }
 
-  .nav_pages {
+  .nav-pages {
     flex-direction: column;
   }
 
-  .nav_pages a {
+  .nav-pages a {
     margin-right: 0;
     margin-bottom: 10px;
   }
